fix layout bug on timeline

--- a/source/stylesheets/layout/_index.css.scss
+++ b/source/stylesheets/layout/_index.css.scss
@@ -365,7 +365,7 @@ p {
 		}
 		.axis {
 			position: relative;
-			height: 500px;
+			height: 504px;
 			width: 30px;
 			margin: auto;
 			display: flex;
@@ -392,14 +392,14 @@ p {
 		}
 	}
 	.timeline-items {
-		height: 500px;
+		height: 504px;
 		max-width: 900px;
 		display: flex;
 		flex-flow: column nowrap;
 		align-items: flex-end;
 		margin: auto;
 		.timeline-item {
-			height: 80px;
+			height: 72px;
 			width: 90%;
 			text-align: left;
 			padding: 0 30px 0 50px;
